--- a/app/templates/app/trading.html
+++ b/app/templates/app/trading.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <h2> IT'S TIME TO TRADE {{user}} </h2>
+    <h2> it's time to trade {{user}} </h2>
 
     <form method="POST">
       <fieldset>
